[gd_scene load_steps=25 format=3 uid="uid://14qmnmykgkkm"]

[ext_resource type="Script" path="res://GameMode/game_mode.gd" id="1_5lu0p"]
[ext_resource type="Texture2D" uid="uid://dho58g7m1mbqc" path="res://GameMode/panelGameMode.png" id="2_1xpnk"]
[ext_resource type="Texture2D" uid="uid://bqsev8163lct7" path="res://GameMode/singleplayerButton.png" id="3_uaate"]
[ext_resource type="Texture2D" uid="uid://csrgb7dfapuit" path="res://MainMenuAssets/backButtonHovered.png" id="3_ukllc"]
[ext_resource type="Texture2D" uid="uid://bji568vtl26ei" path="res://GameMode/singleplayerButtonHovered.png" id="3_xe6kh"]
[ext_resource type="Texture2D" uid="uid://d020ed050v13v" path="res://GameMode/singleplayerButtonClicked.png" id="4_4i77e"]
[ext_resource type="Texture2D" uid="uid://cs3qhhrj6odfw" path="res://GameMode/multiplayerButton.png" id="4_ukllc"]
[ext_resource type="Texture2D" uid="uid://b0b3l8tw320oc" path="res://MainMenuAssets/backButtonClicked.png" id="4_urxm0"]
[ext_resource type="Texture2D" uid="uid://4jnsindprf73" path="res://MainMenuAssets/backButton.png" id="5_mdpq4"]
[ext_resource type="Texture2D" uid="uid://df27fuetidhk3" path="res://GameMode/multiplayerButtonHovered.png" id="6_lh38p"]
[ext_resource type="Texture2D" uid="uid://be6tkyytoua4j" path="res://GameMode/multiplayerButtonClicked.png" id="7_0pyqh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uaate"]
texture = ExtResource("2_1xpnk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_urxm0"]
texture = ExtResource("3_uaate")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lh38p"]
texture = ExtResource("3_xe6kh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0pyqh"]
texture = ExtResource("4_4i77e")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdpq4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mdpq4"]
texture = ExtResource("4_ukllc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_330dc"]
texture = ExtResource("6_lh38p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyf0t"]
texture = ExtResource("7_0pyqh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vsyo2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4i77e"]
texture = ExtResource("5_mdpq4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vsyo2"]
texture = ExtResource("3_ukllc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xe6kh"]
texture = ExtResource("4_urxm0")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xe6kh"]

[node name="GameMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lu0p")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.900167
anchor_bottom = 0.858296
offset_right = 191.68
offset_bottom = 153.04
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uaate")

[node name="SinglePlayerButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0692708
anchor_top = 0.393519
anchor_right = 0.439979
anchor_bottom = 0.547704
offset_right = 0.23996
offset_bottom = 0.47998
theme_override_styles/normal = SubResource("StyleBoxTexture_urxm0")
theme_override_styles/hover = SubResource("StyleBoxTexture_lh38p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0pyqh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mdpq4")
metadata/_edit_use_anchors_ = true

[node name="MultiPlayerButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50625
anchor_top = 0.524074
anchor_right = 0.89025
anchor_bottom = 0.69563
offset_right = 0.719971
offset_bottom = -0.280029
theme_override_styles/normal = SubResource("StyleBoxTexture_mdpq4")
theme_override_styles/hover = SubResource("StyleBoxTexture_330dc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fyf0t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vsyo2")
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.046
anchor_right = 0.102
anchor_bottom = 0.131
offset_left = 10.08
offset_top = -4.68
offset_right = 64.16
offset_bottom = 58.52
theme_override_styles/normal = SubResource("StyleBoxTexture_4i77e")
theme_override_styles/hover = SubResource("StyleBoxTexture_vsyo2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xe6kh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xe6kh")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PanelContainer/Panel/SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/MultiPlayerButton" to="." method="_on_multi_player_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/BackButton" to="." method="_on_button_pressed"]
